# support_ops_env

./: .hfignore-extra  Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rule_baseline_results.json
scripts/: run_baseline.py  run_rule_baseline.py  validate_env.sh
server/: app.py
support_ops_env/: __init__.py  env.py  models.py  reward.py  state.py
support_ops_env/data/: easy_cases.json  hard_cases.json  medium_cases.json
support_ops_env/graders/: __init__.py  common.py  easy.py  hard.py  medium.py
support_ops_env/tasks/: __init__.py  loader.py
tests/: test_env.py  test_graders.py  test_openenv_spec.py  test_rule_baseline.py  test_server_api.py
